	  changes allow e.g. the miscellaneous meta key sequence to be
	  displayed in a shortcut that has a control key, a primary meta
	  key sequence, and a miscellaneous meta key sequence, but no
	  function key. (DLR)
	- Update the help text to mention replacing and spell checking
	  only selected text, and also add a few cosmetic fixes to it.
	  (DLR)
  do_prev_word()
	- Tweak to avoid an infinite loop, since current_x is now a
	  size_t and hence is unsigned. (DLR)
  do_int_spell_fix()
	- Move the REVERSE_SEARCH flag toggling into the NANO_SMALL
	  #ifdef, since the tiny version of nano doesn't support reverse
	  searching.  Move the CASE_SENSITIVE flag toggling out in order
	  to allow the internal spell checker to work properly when
	  NANO_SMALL is defined and DISABLE_SPELLER isn't.  Also, turn
	  the USE_REGEXP flag off during spell checking in order to
	  avoid a potential segfault. (DLR)
	- Fix a problem where if the cursor is in the middle of a file,
	  the spell checker will sometimes only correct the misspelled
	  word instances that appear before the cursor position and then
	  stop. (Rocco)
	- Use do_replace_loop()'s canceled parameter in order to ensure
	  that the spell checking stops if we canceled at the replace
	  prompt. (DLR)
  do_alt_speller()
	- Call terminal_init() unconditionally after running the
	  alternate spell checker, so that the terminal state is
	  properly restored in all cases. (DLR)
  justify_format()
	- For more compatibility with Pico, remove extra space after a
	  character in punct if that character is the same as the one
	  before it.  For example, with the default values of punct and
	  brackets, only one space will be left after "...". (DLR)
  do_para_begin(), do_para_end()
	- Maintain current_y's value when moving up or down lines so
	  that smooth scrolling works correctly. (DLR)
  breakable(), break_line()
	- Make goal a ssize_t instead of an int, since fill is now a