@@ -540,14 +540,11 @@ void do_insertfile(
 #endif
 		"./");
 
-	/* If we're in multibuffer mode and file insertion mode, and the
-	 * filename is blank, open a new buffer instead of canceling. */
+	/* If we're in multibuffer mode and the filename or command is
+	 * blank, open a new buffer instead of canceling. */
 	if (i == -1 || (i == -2
 #ifdef ENABLE_MULTIBUFFER
 		&& !ISSET(MULTIBUFFER)
-#endif
-#ifndef NANO_SMALL
-		&& !execute
 #endif
 		))
 	{
